--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-; DATABASE_URL = jdbc:mysql://localhost:3306/cerso
-;DATABASE_USERNAME = root
-;DATABASE_PASSWORD =
+DATABASE_URL = jdbc:postgresql://dpg-cqgh2h9u0jms73fmebgg-a.oregon-postgres.render.com/dbcerso
+DATABASE_USERNAME = cerso
+DATABASE_PASSWORD = i32W88EAvZPUwe3wMBbuVjWqtZVOGdGN
